[package]
name = "dungeon-madness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# Remember to remove, "dynamic_linking" before release so it can run standalone, otherwise include libbevy_dylib
[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_rapier2d = "0.22"
bevy-inspector-egui = "0.19"
bevy_ecs_ldtk = { version = "0.8", features = ["atlas"] }
leafwing-input-manager = "0.10"


[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3
